Gulp creating embedded sourcemaps when working with useref

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- endbuild -->
 </head>
 
-<body ng-app="app" ng-strict-di>
+<body ng-app="app">
 	<state-loading-indicator></state-loading-indicator>
 	<div ui-view="leftNav">
 		<left-nav></left-nav>
@@ -40,9 +40,9 @@
 	<script src="/app/app.templates.module.js"></script>
 	<script src="/app/app.config.js"></script>
 	<script src="/app/app.routes.js"></script>
-	<script src="/app/components/fees/feesController.js"></script>
 	<script src="/app/components/addPersonDirective/addPersonDirective.js"></script>
 	<script src="/app/components/addPersonDirective/addPersonService.js"></script>
+	<script src="/app/components/fees/feesController.js"></script>
 	<script src="/app/components/home/homeController.js"></script>
 	<script src="/app/components/home/homeService.js"></script>
 	<script src="/app/shared/accountService/accountService.js"></script>
